--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://djshow832.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: minima
+remote_theme: thelehhman/texture
+theme: texture
 plugins:
   - jekyll-feed
 
@@ -47,3 +48,12 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+permalink: /posts/:title/
+texture:
+  title: djshow832
+  tagline: Database Developer
+  date_format: "%b %-d, %Y"
+  style: black
+  showNav: false
+  showPicker: true
